# transcript-cli

./: .gitignore
docs/: go-rewrite.md
go/: .gitignore  README.md  TRACEABILITY.md  go.mod  go.sum
go/cmd/video-to-srt/: main.go
go/internal/audio/: audio.go  audio_test.go  splitter.go  splitter_test.go
go/internal/improve/: improve.go  improve_test.go
go/internal/pipeline/: pipeline.go  pipeline_test.go
go/internal/provider/: provider.go  provider_test.go
go/internal/source/: source.go  source_test.go
go/internal/srt/: atomic.go  srt.go  srt_test.go  validate.go
openspec/changes/add-pipeline-progress-tracking/: tasks.md
openspec/changes/add-transcription-provider-retries/: design.md  proposal.md
openspec/changes/archive/2026-05-07-add-pipeline-progress-tracking/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-add-sherpa-parakeet-provider/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-07-add-transcription-provider-retries/: tasks.md
openspec/changes/archive/2026-05-07-add-vertex-gemini-provider/: design.md  (+2 more)
openspec/specs/audio-extraction/: spec.md
openspec/specs/audio-splitting/: spec.md
openspec/specs/audio-to-srt-transcription/: spec.md
openspec/specs/pipeline-orchestrator/: spec.md
openspec/specs/srt-standardization/: spec.md
openspec/specs/srt-validation/: spec.md
openspec/specs/subtitle-improvement/: spec.md
openspec/specs/video-source-ingestion/: spec.md
python/: README.md  audio_splitter.py  extract_audio.py  improve_subtitles.py  pipeline.py  providers.py  pyproject.toml  srt.py  standardize_srt.py  test_audio_splitter.py  test_pipeline_outputs.py  test_providers.py  transcribe.py  transcribe_grok.py  transcribe_mistral.py  validate_srt.py
testdata/: bom.srt  crlf.srt  invalid-duration.srt  long-cue.srt  malformed.srt  overlap.srt  speaker-labeled.srt  valid.srt
(+27 files in other folders)
