[project]
name = "video-to-srt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.0",
    "moviepy>=2.0",
    "requests>=2.33.1",
]

[project.scripts]
video-to-srt = "transcribe:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "extract_audio",
    "providers",
    "srt",
    "standardize_srt",
    "transcribe",
    "transcribe_grok",
    "transcribe_mistral",
    "validate_srt",
]
