[project]
name = "video-to-srt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "mistralai>=1.0",
    "moviepy>=2.0",
    "numpy>=1.26",
    "requests>=2.33.1",
    "sherpa-onnx-bin>=1.13.0",
    "sherpa-onnx>=1.12.0",
]

[project.scripts]
video-to-srt = "transcribe:main"
improve-subtitles = "improve_subtitles:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "audio_splitter",
    "extract_audio",
    "providers",
    "srt",
    "improve_subtitles",
    "transcribe",
    "transcribe_grok",
    "transcribe_mistral",
    "validate_srt",
]
